_sass/_base.scss
/* ... */
// Projects

.projects {
  a {
    text-decoration: none;

    &:hover {
      .card-title {
        color: var(--global-theme-color);
      }
    }
  }

  .card {
    img {
      width: 100%;
    }
  }

  .col {
    padding-bottom: 1rem;
  }

  .grid-sizer,
  .grid-item {
    width: 250px;
    margin-bottom: 10px;
  }

  h2.category {
    color: #000000;
    border-bottom: 1px solid var(--global-divider-color);
    padding-top: 0.5rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
    text-align: right;
    font-weight: bold;
  }
}

// Publications

.publications {
  margin-top: 2rem;

  h1 {
    color: var(--global-theme-color);
    font-size: 2rem;
    text-align: center;
    margin-top: 1em;
    margin-bottom: 1em;
  }

  h2 {
    margin-bottom: 1rem;

    span {
      font-size: 1.5rem;
    }
  }

  h2.bibliography {
    color: #000000;
    border-top: 1px solid var(--global-divider-color);
    padding-top: 1rem;
    margin-top: 2rem;
    text-align: right;
    font-weight: bold;
  }

  ol.bibliography {
    list-style: none;
    padding: 0;
    margin-top: 0;

    li {
      margin-bottom: 1rem;

      .preview {
      }

      .abbr {
        margin-bottom: 0.5rem;

        abbr {
          display: inline-block;
          background-color: var(--global-theme-color);
          margin-bottom: 0.5rem;
          color: var(--global-card-bg-color) !important;

          a {
            color: white;

            &:hover {
              text-decoration: none;
            }
          }
        }

        .award {
          color: var(--global-theme-color) !important;
          border: 1px solid var(--global-theme-color);
        }
      }

      .title {
        font-weight: bolder;
      }

      .periodical {
        color: #000000;
        font-weight: normal;
      }

      .author {
        a {
          border-bottom: 1px dashed var(--global-theme-color);

          &:hover {
            border-bottom-style: solid;
            text-decoration: none;
          }
        }

        > em {
          border-bottom: 1px solid;
          font-style: normal;
        }

        > span.more-authors {
          color: var(--global-text-color-light);
          border-bottom: 1px dashed var(--global-text-color-light);
          cursor: pointer;

          &:hover {
            color: var(--global-text-color);
            border-bottom: 1px dashed var(--global-text-color);
          }
        }
      }

      .links {
        a.btn {
          color: var(--global-text-color);
          border: 1px solid var(--global-text-color);
          padding-left: 1rem;
          padding-right: 1rem;
          padding-top: 0.25rem;
          padding-bottom: 0.25rem;
          margin-left: 0;

          &:hover {
            color: var(--global-theme-color);
            border-color: var(--global-theme-color);
          }
        }
        a.award.btn {
          border-color: var(--global-highlight-color);
        }
      }

      .badges {
        padding-bottom: 0.5rem;
        span {
          display: inline-block;
          color: $black-color;
          height: 100%;
          padding-right: 0.5rem;
          vertical-align: middle;

          &:hover {
            text-decoration: underline;
          }
        }
      }

      .hidden {
        font-size: 0.875rem;
        max-height: 0px;
        overflow: hidden;
        text-align: justify;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;

        p {
          line-height: 1.4em;
          margin: 10px;
        }

        pre {
          font-size: 1em;
          line-height: 1.4em;
          padding: 10px;
        }
      }

      .hidden.open {
        max-height: 100em;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;
      }

      div.abstract.hidden {
        border: dashed 1px var(--global-bg-color);
      }

      div.abstract.hidden.open {
        border-color: var(--global-text-color);
      }
    }
    div.award.hidden {
      border: dashed 1px var(--global-bg-color);
    }
    div.award.hidden.open {
      border-color: var(--global-highlight-color);
    }
  }
}

// Rouge Color Customization
figure.highlight {
  margin: 0 0 1rem;

  // Responsive code block container
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;

  pre {
    // Ensure code blocks can scroll horizontally
    white-space: pre;
    word-wrap: normal;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
  }
}

pre {
  color: var(--global-theme-color);
  background-color: var(--global-code-bg-color);
  border-radius: 6px;
  padding: 6px 12px;

  // Responsive behavior for code blocks
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  white-space: pre;
  word-wrap: normal;

  pre,
  code {
    background-color: transparent;
    border-radius: 0;
    margin-bottom: 0;
    padding: 0;
  }
}

code {
  color: var(--global-theme-color);
  background-color: var(--global-code-bg-color);
  border-radius: 3px;
  padding: 3px 3px;

  // Inline code should wrap
  white-space: normal;
  word-wrap: break-word;
}

// Transitioning Themes
html.transition,
html.transition *,
html.transition *:before,
html.transition *:after {
  transition: all 750ms !important;
  transition-delay: 0 !important;
}

// Extra Markdown style (post Customization)
.post {
  .post-meta {
    color: var(--global-text-color-light);
    font-size: 0.875rem;
    margin-bottom: 0;
  }

  .post-tags {
    color: var(--global-text-color-light);
    font-size: 0.875rem;
    padding-top: 0.25rem;
    padding-bottom: 1rem;

    a {
      color: var(--global-text-color-light);
      text-decoration: none;

      &:hover {
        color: var(--global-theme-color);
      }
    }
  }
}
/* ... */

